--- a/src/styles/footer.module.css
+++ b/src/styles/footer.module.css
@@ -5,21 +5,19 @@
   text-align: center;
   margin-left: 50px;
   margin-right: 50px;
-  margin-top: 20;
+  margin-top: 20px;
   margin-bottom: 20px;
   border: 2px solid #f6a7ba;
   box-shadow: 5px 5px 10px #feb9c8;
   background-color: #d2f3e0;
   border-radius: 20px;
-  
 }
-
 
 .contactContainer {
   display: flex;
 }
 
-.leftBox {
+/* .leftBox {
   font-size: 60px;
   font-family: Impact, Haettenschweiler, "Arial Narrow Bold", sans-serif;
   color: #007944;
@@ -30,10 +28,10 @@
   border: 2px solid #f6a7ba;
   background-color: #d2f3e0;
   border-radius: 20px;
-  padding: 20px 50px;
-}
+  padding: 20px 50px; */
+/* } */
 
-.middleBox {
+/* .middleBox {
   flex: 1;
   text-align: center;
   margin-right: 50px;
@@ -41,7 +39,7 @@
   background-color: #feb9c8;
   border-radius: 20px;
   padding: 20px 50px;
-}
+} */
 
 .icons {
   text-align: center;
@@ -49,7 +47,7 @@
   padding: 5px;
 }
 
-.rightBox {
+/* .rightBox {
   flex: 1;
   text-align: center;
   margin-right: 50px;
@@ -58,4 +56,4 @@
   background-color: #d2f3e0;
   border-radius: 20px;
   padding: 20px 50px;
-}
+} */
