--- a/src/styles/aboutMe.module.css
+++ b/src/styles/aboutMe.module.css
@@ -44,13 +44,21 @@
 }
 
 .codingdojo {
-  text-align: center;
   margin: 50px;
   border: 2px solid #f6a7ba;
   background-color: #feb9c8;
   border-radius: 20px;
   padding: 20px 50px;
   box-shadow: 5px 5px 10px #f6a7ba;
+}
+.dojoheader {
+  text-align: center;
+  font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+  font-size: 24px;
+}
+
+.dojosucess {
+  display: block;
 }
 .travel {
   text-align: center;
