--- a/src/styles/contact.module.css
+++ b/src/styles/contact.module.css
@@ -9,7 +9,7 @@
   text-align: center;
   margin-left: 50px;
   margin-right: 50px;
-  margin-top: 20;
+  margin-top: 20px;
   margin-bottom: 20px;
   border: 2px solid #f6a7ba;
   box-shadow: 5px 5px 10px #feb9c8;
@@ -27,7 +27,3 @@
   width: 250px;
   border-radius: 20px;
 }
-
-
-
-
