--- a/src/styles/contact.module.css
+++ b/src/styles/contact.module.css
@@ -9,8 +9,8 @@
   text-align: center;
   margin-left: 50px;
   margin-right: 50px;
-  margin-top: 20px;
-  margin-bottom: 20px;
+  /* margin-top: 20px;
+  margin-bottom: 20px; */
   border: 2px solid #f6a7ba;
   box-shadow: 5px 5px 10px #feb9c8;
   background-color: #d2f3e0;
