--- a/src/styles/resume.module.css
+++ b/src/styles/resume.module.css
@@ -27,6 +27,12 @@
   border-radius: 5px;
   font-family: Arial, Helvetica, sans-serif;
 }
+.downloadBtn:hover {
+  cursor:pointer;
+  background-color: #f6a7ba;
+  
+}
+
 .button {
   text-align: center;
 }
